fixed invisible navbar toggler, centered main image and allows user to click off the menu to collapse it if it is not collapsed

--- a/style.css
+++ b/style.css
@@ -1,17 +1,11 @@
-/* navbar */
-.navbar .nav-link {
-  color: white;
-}
-
-.navbar-brand {
-  color: white;
-}
 /* hero background image */
 .bgimage {
   height:100vh;
   background: url('images/heroImage3.jpeg');
   background-size:cover;
+  background-position: center;
   position:relative;
+  
 }
 /* text css above hero image*/
 .hero_title {
